# tax-regimes

./: .gitignore  README.md  README.rst  pyproject.toml
tax_regimes/: __init__.py  compare.py  tax.py  utils.py
tests/: test_tax_regimes.py
